--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -31,7 +31,7 @@ $().ready(function() {
 				}
 			});
 			if (tabNomExiste.length > 0) {
-				let promptexistedeja = [[#{lesHausses}]] + ' : ' + tabNomExiste.join(',') + ' ' + [[#{nomexistentdeja}]];
+				let promptexistedeja = [[#{Hausses}]] + ' : ' + tabNomExiste.join(',') + ' ' + [[#{nomexistentdeja}]];
 				if (tabNomOk.length == 0) {
 					alert(promptexistedeja);
 					return false;					
