--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -51,7 +51,7 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{lesHausses}"></h1>
+				<h1 class="item" th:text="#{Hausses}"></h1>
 			</div>
 			<div class="col">
 				<a id="cree" th:href="@{/hausse/cree}"
