--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -85,8 +85,8 @@ $(document).ready(function() {
 					<th style="background-color:LemonChiffon" th:text="#{poidsMielHausses}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{poidsMielPot}"></th>
 					<th th:text="#{commentaire}"></th>
-					<th th:text="#{lesHausses}"></th>
-					<th th:text="#{lesRuches}"></th>
+					<th th:text="#{Hausses}"></th>
+					<th th:text="#{Ruches}"></th>
 					<th th:text="#{poidsMielMoyen}"></th>
 				</tr>
 			</thead>
