--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -28,7 +28,7 @@ $().ready(function() {
 			}
 		});
 		if (tabNomExiste.length > 0) {
-			let promptexistedeja = [[#{lesRuches}]] + ' : ' + tabNomExiste.join(',') + ' ' + [[#{nomexistentdeja}]];
+			let promptexistedeja = [[#{Ruches}]] + ' : ' + tabNomExiste.join(',') + ' ' + [[#{nomexistentdeja}]];
 			if (tabNomOk.length == 0) {
 				alert(promptexistedeja);
 				return false;					
