--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -24,7 +24,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{lesRuches}">Les ruches</h1>
+				<h1 class="item" th:text="#{Ruches}">Les ruches</h1>
 			</div>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 					<th style="background-color:Tomato" th:text="#{nbCadres}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
 					<th th:text="#{type}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{lesHausses}"></th>
+					<th style="background-color:PaleGoldenRod" th:text="#{Hausses}"></th>
 					<th style="background-color:PaleGoldenRod"></th>										
 					<th style="background-color:PaleGoldenRod" >Commentaire hausse</th>
 					<th:block th:if="${session.voirLatLon}">
