--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -149,7 +149,7 @@
 				<td th:text="${#numbers.formatDecimal(poidsTotal/1000.0,1,2,'DEFAULT')}"></td>		
 			</tr>
 			<tr>
-				<th style="background-color:LightCyan" th:text="#{lesRuches}"></th>
+				<th style="background-color:LightCyan" th:text="#{Ruches}"></th>
 				<td th:each="nb : ${recoltesNbRuches}" th:text="${nb}"></td>
 				<td></td>		
 			</tr>
