--- a/src/main/resources/templates/rucher/rucherDetailGg.html
+++ b/src/main/resources/templates/rucher/rucherDetailGg.html
@@ -17,7 +17,7 @@
 	const essaimtxt = [[#{essaim}]];
 	const pasdessaimtxt = [[#{Pasdessaim}]];
 	const ruchetxt = [[#{ruche}]];
-	const haussestxt = [[#{lesHausses}]];
+	const haussestxt = [[#{Hausses}]];
 	const pasdehaussetxt = [[#{Pasdehausse}]];
 	const ruches = [[${ruches}]];
 	const ruchestxt= [[#{ruches}]];
