--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -22,12 +22,12 @@
 	const nomHausses = [[${hausseNoms}]];
 	const rapprochertxt = [[#{rapprocher?}]];
 	const pleinecran = [[#{pleinecran}]];
-	const lesRuches = [[#{lesRuches}]];
+	const lesRuches = [[#{Ruches}]];
 	const couchemarqueursruches = [[#{couchemarqueursruches}]];
 	const essaimtxt = [[#{essaim}]];
 	const pasdessaimtxt = [[#{Pasdessaim}]];
 	const ruchetxt = [[#{ruche}]];
-	const lesHausses = [[#{lesHausses}]];
+	const lesHausses = [[#{Hausses}]];
 	const pasdehaussetxt = [[#{Pasdehausse}]];
 	const parcourstxt = [[#{parcours}]];
 	const parcoursoptimumtxt = [[#{parcoursoptimum}]];
