--- a/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
+++ b/src/main/resources/templates/rucher/rucherRuchesAjoutForm.html
@@ -34,7 +34,7 @@
 				<h1 class="item">
 				  <a th:href="@{'/rucher/ruches/'+${rucherId}}"
 					th:text="#{ajoutruches} + ' ' + ${rucher.nom}"></a>
-				<th:block th:text="' ' + #{lesRuches} + ' ' + ${ruchesNoms}"></th:block>
+				<th:block th:text="' ' + #{Ruches} + ' ' + ${ruchesNoms}"></th:block>
 				</h1>
         	</div>
         </div>
