--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -24,7 +24,7 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-			<h1 class="item" th:text="#{lesRuchers}"></h1>
+			<h1 class="item" th:text="#{Ruchers}"></h1>
 			</div>
 			<div class="col">
        		 <a id="cree" th:href="@{/rucher/cree}" class="bi bi-plus-lg"
@@ -53,8 +53,8 @@ $(document).ready(function() {
 					</th:block>
 					<th style="background-color:LemonChiffon" th:text="#{altitude}"></th>
 					<th th:text="#{ressource}"></th>
-					<th th:text="#{lesRuches}"></th>
-					<th th:text="#{lesHausses}"></th>
+					<th th:text="#{Ruches}"></th>
+					<th th:text="#{Hausses}"></th>
 					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
