--- a/src/main/resources/templates/rucher/ruchersListeGg.html
+++ b/src/main/resources/templates/rucher/ruchersListeGg.html
@@ -7,7 +7,7 @@
 	const nomRuches = [[${rucheNoms}]];
 	const urlruches = [[@{/}]];
 	const ruchertxt = [[#{rucher}]];
-	const lesRuchestxt = [[#{lesRuches}]];
+	const lesRuchestxt = [[#{Ruches}]];
 	const ruchersmapzoom = [[${@environment.getProperty('ruchers.map.zoom')}]]	
     const _csrf_token = [[${_csrf.token}]];
 </script>
