--- a/src/main/resources/templates/rucher/ruchersListeIgn.html
+++ b/src/main/resources/templates/rucher/ruchersListeIgn.html
@@ -8,8 +8,8 @@
 	const ruchers = [[${ruchers}]];	
 	const nomRuches = [[${rucheNoms}]];
 	const recentertxt = [[#{recentrer?}]];
-	const lesRucherstxt = [[#{lesRuchers}]];
-	const lesRuchestxt = [[#{lesRuches}]];
+	const lesRucherstxt = [[#{Ruchers}]];
+	const lesRuchestxt = [[#{Ruches}]];
 	const ruchertxt = [[#{rucher}]];
 	const couchemarqueursrucherstxt = [[#{couchemarqueursruchers}]];
 	const pleinecrantxt = [[#{pleinecran}]];
