--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -53,7 +53,7 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{lesEssaims}"></h1>
+				<h1 class="item" th:text="#{Essaims}"></h1>
 			</div>
 			<div class="col">
 				<a id="cree" th:href="@{/essaim/cree}"
