--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -24,7 +24,7 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-			<h1 class="item" th:text="#{lesPersonnes}"></h1>
+			<h1 class="item" th:text="#{Personnes}"></h1>
 			</div>
 			<div class="col">
 				<a id="cree" th:href="@{/personne/cree}"
