--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -25,7 +25,7 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-			<h1 class="item" th:text="#{lesRecoltes}"></h1>
+			<h1 class="item" th:text="#{Recoltes}"></h1>
 			</div>
 			<div class="col">
 				<a id="cree" th:href="@{/recolte/cree}"
