--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -47,7 +47,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{lesRuches}"></h1>
+				<h1 class="item" th:text="#{Ruches}"></h1>
 			</div>
 			<div class="col">
 				<a id="cree" th:href="@{/ruche/cree}" class="bi bi-plus-lg"
@@ -72,7 +72,7 @@
 					<th style="background-color:Tomato" th:text="#{nbCadres}"></th>
 					<th style="background-color:Tomato" th:text="#{nbCadresMax}"></th>
 					<th th:text="#{type}"></th>
-					<th th:text="#{lesHausses}"></th>
+					<th th:text="#{Hausses}"></th>
 					<th:block th:if="${session.voirLatLon}">
 						<th style="background-color: LemonChiffon" th:text="#{latitude}"></th>
 						<th style="background-color: LemonChiffon" th:text="#{longitude}"></th>
