pagination amélioration message : "tous les" éléments

--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -43,7 +43,7 @@ if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('f
 }
 $.extend( $.fn.dataTable.defaults, {
 	stateSave: true,
-	lengthMenu: [ [10, 25, 50, 100, -1], [10, 25, 50, 100, [[#{Toutes}]] ] ],
+	lengthMenu: [ [10, 25, 50, 100, -1], [10, 25, 50, 100, [[#{tousLes}]] ] ],
 	pageLength: [[${@environment.getProperty('datatables.pageLength')}]],
 });
 </script>
