rucherDetailOl.js correction bug export pdf et png si appel ign

--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -59,7 +59,7 @@ $().ready(function() {
 		</table>	
 		<h6	th:unless="${#arrays.length(ruchers)}" th:text="#{Pasderucher}"></h6>
 		<th:block th:if="${#arrays.length(ruchers)}">	
-			<h6 th:text="#{listeRuchers}"></h6>
+			<h6 th:text="#{contactRuchers}"></h6>
 			<table class="table table-sm table-bordered table-striped" id="ruchers">
 				<thead>
 					<tr>
