--- a/src/main/resources/templates/rucher/rucherDetailIgn.html
+++ b/src/main/resources/templates/rucher/rucherDetailIgn.html
@@ -35,6 +35,7 @@
 	const entreetxt = [[#{Entree}]];
 	const ruchesurl = [[@{/}]];
 	const _csrf_token = [[${_csrf.token}]];
+	const dessinEnregistretxt = [[#{dessinEnregistre}]];
 	window.onload = function () {
  		rucherDetail(true); 			
 	}
