--- a/src/main/resources/templates/rucher/rucherDetailOsm.html
+++ b/src/main/resources/templates/rucher/rucherDetailOsm.html
@@ -36,6 +36,7 @@
 	const entreetxt = [[#{Entree}]];
 	const ruchesurl = [[@{/}]];
 	const _csrf_token = [[${_csrf.token}]];
+	const dessinEnregistretxt = [[#{dessinEnregistre}]];
 	window.onload = function () {
  		rucherDetail(false);
 	}
