recolte : Rucher(s) et séparation des ruchers ave ", "

--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -81,7 +81,7 @@ $(document).ready(function() {
 			<thead>
 				<tr>
 					<th th:text="#{typeMiel}"></th>
-					<th th:text="#{rucher}"></th>
+					<th th:text="#{RucherS}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{poidsMielHausses}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{poidsMielPot}"></th>
 					<th th:text="#{commentaire}"></th>
