--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -43,7 +43,7 @@ $(document).ready(function() {
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
+					<th style="background-color:PaleGoldenRod" th:text="#{RucherS}"></th>
 					<th th:text="#{typeMiel}"></th>
 					<th style="background-color:LemonChiffon" th:text="#{poidsMielPot}"></th>
 					<th th:text="#{commentaire}"></th>
