--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -237,7 +237,8 @@ $(document).ready(function() {
 				</tr>
 			</tbody>
 		</table>
-		<table th:if="${#arrays.length(poidsListe)} &gt; 0" class="table table-sm table-bordered">			
+		<h6 th:text="#{PasDeRecolte}" th:if="${#lists.isEmpty(poidsListe)}"></h6>	
+		<table th:unless="${#lists.isEmpty(poidsListe)}" class="table table-sm table-bordered">			
 			<thead>
 				<tr>
 					<th style="background-color:LightCyan" th:text="#{recolte}"></th>
@@ -256,6 +257,7 @@ $(document).ready(function() {
 			</tbody>
 		</table>
 	</div>
+	<br/>
 	<footer th:replace="include::footer"></footer>
 </body>
 </html>
