--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -132,7 +132,8 @@
 			</table>
 		</th:block>
 		<br/>
-		<table th:if="${#arrays.length(poidsListe)} &gt; 0" class="table table-sm table-bordered">			
+		<h6 th:text="#{PasDeRecolte}" th:if="${#lists.isEmpty(poidsListe)}"></h6>	
+		<table th:unless="${#lists.isEmpty(poidsListe)}" class="table table-sm table-bordered">			
 		<thead>
 			<tr>
 				<th style="background-color:LightCyan" th:text="#{recolte}"></th>
@@ -162,6 +163,7 @@
 		</tbody>
 	</table>
 	</div>
+	<br/>
 	<footer th:replace="include::footer"></footer>
 </body>
 </html>
