essaimGraphe ajout actif/inactif dans popup

--- a/src/main/resources/templates/essaim/essaimGraphe.html
+++ b/src/main/resources/templates/essaim/essaimGraphe.html
@@ -11,6 +11,8 @@
 	const ruchertxt = [[#{rucher}]];
 	const MielKgtxt = [[#{MielKg}]];
 	const MielDescKgtxt = [[#{MielDescKg}]];
+	const Actif = [[#{actif}]];
+	const Inactif = [[#{Inactif}]];
 	const urlessaim = [[@{/essaim/}]];
 	$(document).ready(essaimGraphe);
 </script>
