--- a/src/main/resources/templates/evenement/evenementCadreRucheListe.html
+++ b/src/main/resources/templates/evenement/evenementCadreRucheListe.html
@@ -43,7 +43,7 @@
 				<tr th:each="evenement : ${evenements}">
 					<td>
 						<a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:href="@{'/evenement/'+${evenement.id}}"></a>
+							th:href="@{'/evenement/'+${evenement.id}+'?type=cadre'}"></a>
 					</td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.essaim?.nom}"></td>
