--- a/src/main/resources/templates/rucher/ruchersListeIgn.html
+++ b/src/main/resources/templates/rucher/ruchersListeIgn.html
@@ -30,7 +30,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{rucherscarteign}"></h1>
+				<h1 class="item">
+					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
+					<th:block th:text="' '+#{carteIgn}"></th:block>
+				</h1>
 			</div>
 			<div class="col">
 				<a href="#" class="bi bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0" role="button"
