--- a/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
+++ b/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
@@ -42,7 +42,7 @@
 				<tr th:each="evenement : ${evenements}">
 					<td>
 						<a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:href="@{'/evenement/'+${evenement.id}}"></a>
+							th:href="@{'/evenement/'+${evenement.id}+'?type=ajoutruche'}"></a>
 					</td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.rucher?.nom}"></td>
