--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -58,7 +58,10 @@ $(document).ready(function() {
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" id="titre" th:text="#{recolte}+' '+${#temporals.format(recolte.date, 'yyyy/MM/dd HH:mm')}"></h1>
+				<h1 class="item">
+					<a th:href="@{'/recolte/liste'}" th:text="#{recolte}"></a>
+					<th:block th:text="' '+${#temporals.format(recolte.date, 'yyyy/MM/dd HH:mm')}"></th:block>
+				</h1>
 			</div>
 			<div class="col">
 				<a th:href="@{'/recolte/modifie/'+${recolte.id}}"
