--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -29,8 +29,11 @@
 	<br />
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col">
-				<h1 class="item" th:text="#{rucherscarteosm}"></h1>
+			<div class="col">			
+				<h1 class="item">
+					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
+					<th:block th:text="' '+#{carteOsm}"></th:block>
+				</h1>
 			</div>
 			<div class="col">
 				<a href="#" class="bi bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0" role="button"
