--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -1,8 +1,20 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+
+
+<script th:replace="include :: jsdatetimepicker"></script>
+<link th:replace="include :: cssdatetimepicker"/>
+<script th:replace="include :: localejsdatetimepicker"></script>
+<script th:replace="include :: moment"></script>
+
+
 <script th:inline="javascript">
 $(document).ready(function() {
+	
+	$('#date').hide();
+	$('#dateOK').hide();
+	
 	$("#enlevehausses").click(function() {
 		/*[- */ 
 			La fonction est désactivée après 30 jours 
@@ -15,6 +27,13 @@ $(document).ready(function() {
 		if (!confirm([[#{enlevertoutesleshaussesrecolte}]])) {
 			return;
 		}
+		
+		$('#date').show();
+		$('#dateOK').show();
+		$('#date').attr('value', moment().format("MM/DD/YYYY HH:mm"));
+		$('#date').focus();
+		
+		/*
 		let requestData = {};
 		const _csrf_token = [[${_csrf.token}]];
 	    const _csrf_param_name = [[${_csrf.parameterName}]];
@@ -22,8 +41,29 @@ $(document).ready(function() {
 		$.post( [[@{/recolte/haussesDepot/}]] + [[${recolte.id}]],
 				requestData).done(function (data) { 
 					alert( data );
+		});
+		*/
+	});
+	
+	$('#dateOK').on('click', function() {
+		const date = $('#date').val();
+		$('#date').hide();
+		$('#dateOK').hide();
+		
+		let requestData = {};
+		const _csrf_token = [[${_csrf.token}]];
+	    const _csrf_param_name = [[${_csrf.parameterName}]];
+	    requestData[_csrf_param_name] = _csrf_token;
+		
+	    requestData['date'] = date;
+	    
+	    $.post( [[@{/recolte/haussesDepot/}]] + [[${recolte.id}]],
+				requestData).done(function (data) { 
+					alert( data );
 		});		
 	});
+	
+	
 	$('.confirmationsupprime').on('click', function () {
         return confirm([[#{supprimerrecolteethausses}]]);
     });
@@ -75,6 +115,10 @@ $(document).ready(function() {
        			<a id="supprime" th:href="@{'/recolte/supprime/'+${recolte.id}}"
        			  class="confirmationsupprime bi bi-trash" style="color:red" 
        			  th:title="#{supprimer}" aria-hidden="true"></a>
+       			
+       			<input type="text" id="date" name="date">
+       			<button id="dateOK">Date retrait hausses</button>
+				 
 			</div>
 		</div>
 	</div>
