rucherStatistiques.html ajout lien retour vers liste des ruchers

--- a/src/main/resources/templates/rucher/rucherStatistiques.html
+++ b/src/main/resources/templates/rucher/rucherStatistiques.html
@@ -26,10 +26,13 @@ $(document).ready(function() {
 	<br />
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col">
-				<h1 class="item" th:text="#{ProductionRuchersRecolte}"></h1>
-			</div>
 		
+			<div class="col">
+				<h1 class="item">
+					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
+					<th:block th:text="#{ProductionRecolte}"></th:block>
+				</h1>
+			</div>		
 			<div class="col">
 				<a href="#" class="bi bi-question-lg" data-bs-toggle="popover"
 					data-bs-trigger="focus" tabindex="0" role="button"
