--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -10,9 +10,12 @@
 	const poidsMielHausses = [[${poidsMielHausses}]];
 	const poidsMielPots = [[${poidsMielPots}]];
 	const debutAnnee = [[${debutAnnee}]];
-	const nbIEssaims = [[${nbIEssaims}]];
-	
+	const nbIEssaims = [[${nbIEssaims}]];	
 	const Min = [[#{Min}]];
+	const PoidsMielAnneeKg = [[#{PoidsMielAnneeKg}]];
+	const Hausses = [[#{Hausses}]];
+	const Pots = [[#{Pots}]];
+	const HaussesEssaim = [[#{HaussesEssaim}]];
 	$(document).ready(function() { grapheRecolte(); });
 </script>
 </head>
