--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -5,9 +5,10 @@
 <script th:replace="include :: jsdatepicker-fr"></script>
 <script th:inline="javascript">
 	$().ready(function() {
+		const essaimNoms = [[${essaimNoms}]];
 		$("#nom").focus();
 		jQuery.validator.addMethod("nomExiste", function(value) {   
-    		return $.inArray(value, [[${essaimNoms}]]) == -1;
+    		return $.inArray(value, essaimNoms) == -1;
 			}, [[#{nomexiste}]]);
 		if ((window.navigator.language == 'fr') || (window.navigator.language.indexOf('fr') != -1)) {
 			$.datepicker.setDefaults(
