--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -3,6 +3,9 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 $().ready(function() {
+	const _csrf_token = [[${_csrf.token}]];
+    const _csrf_param_name = [[${_csrf.parameterName}]];
+	let haussenoms = [[${haussenoms}]];
 	$('.confirmation').on('click', function () {
 		if([[${recolteHausses}]]) {
 			alert([[#{haussenonsupprimeerefrecolte}]]);
@@ -14,7 +17,7 @@ $().ready(function() {
 		}
     });
 	function nomexiste (value) {   
-		return $.inArray(value, [[${haussenoms}]]) != -1;
+		return $.inArray(value, haussenoms) != -1;
 		};
 	$( "#clone" ).click(function() {
 		const noms = prompt([[#{nomhaussesvirgule}]]);
@@ -28,6 +31,8 @@ $().ready(function() {
 					tabNomExiste.push(item);
 				} else {
 					tabNomOk.push(item);
+					/*[- ce nom ne doit pas être réutilisé -]*/
+					haussenoms.push(item);
 				}
 			});
 			if (tabNomExiste.length > 0) {
@@ -41,8 +46,6 @@ $().ready(function() {
 				}
 			}
 			let requestData = {nomclones : tabNomOk.join(',')};
-			const _csrf_token = [[${_csrf.token}]];
-		    const _csrf_param_name = [[${_csrf.parameterName}]];
 		    requestData[_csrf_param_name] = _csrf_token;
 		    $.post( [[@{/hausse/clone/}]] + [[${hausse.id}]],
 					requestData).done(function (data) { 
