--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -50,7 +50,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:unless="${essaim.id}" th:text="#{ajouterEssaim}"></h1>
+				<h1 class="item" th:unless="${essaim.id}">
+					<th:block th:text="#{ajouterUn} + ' '"></th:block>
+					<a th:href="@{'/essaim/liste'}" th:text="#{essaim}"></a>
+				</h1>
 				<h1 class="item" th:if="${essaim.id}">
 					<th:block th:text="#{modification}"></th:block>
 					<a th:href="@{'/essaim/'+${essaim.id}}"
