--- a/src/main/resources/templates/evenement/evenementForm.html
+++ b/src/main/resources/templates/evenement/evenementForm.html
@@ -42,7 +42,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:unless="${evenement.id}" th:text="#{ajouterEvenement}"></h1>
+				<h1 class="item" th:unless="${evenement.id}">
+					<th:block th:text="#{ajouterUn} + ' '"></th:block>
+					<a th:href="@{'/evenement/liste'}" th:text="#{evenement}"></a>
+				</h1>
 				<h1 class="item" th:if="${evenement.id}">
 					<th:block th:text="#{modification}"></th:block>
 					<a th:href="@{'/evenement/'+${evenement.id}}"
