--- a/src/main/resources/templates/personne/personneForm.html
+++ b/src/main/resources/templates/personne/personneForm.html
@@ -33,7 +33,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:unless="${personne.id}" th:text="#{ajouterPersonne}"></h1>
+				<h1 class="item" th:unless="${personne.id}">
+					<th:block th:text="#{ajouterUne} + ' '"></th:block>
+					<a th:href="@{'/personne/liste'}" th:text="#{personne}"></a>
+				</h1>
 				<h1 class="item" th:if="${personne.id}">
 					<th:block th:text="#{modification}"></th:block>
 					<a th:href="@{'/personne/'+${personne.id}}"
