--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="common_header(scripts,styles,links)">
 <title th:text="#{Ruches}"></title>
 <meta charset="UTF-8" />
